[project]
name = "bctrl"
version = "0.1.1"
description = "Remote browser automation for AI agents - Python SDK"
readme = "README.md"
license = "ISC"
requires-python = ">=3.10"
authors = [
    { name = "bctrl" }
]
keywords = ["browser", "automation", "ai", "puppeteer", "playwright", "selenium", "web", "scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/bctrlhq/sdk-py"
Documentation = "https://github.com/bctrlhq/sdk-py#readme"
Repository = "https://github.com/bctrlhq/sdk-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    ".venv-build",
    "dist",
    "tests",
]

[tool.hatch.build.targets.wheel]
packages = ["bctrl"]
